# KISAutoTrade

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MasterPlan.md  README.md  TodoList.md  agent.md  agents.md  index.html  package-lock.json  package.json  playwright.config.ts  secure_config.example.json  todo.md  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  market_hours.rs
src-tauri/src/api/: detect.rs  mod.rs  rest.rs  token.rs  websocket.rs
src-tauri/src/broker/: adapter.rs  domain.rs  kis.rs  mod.rs  rate_limit.rs  toss.rs
src-tauri/src/commands/: accounts.rs  archive.rs  database.rs  market.rs  orders.rs  records.rs  risk.rs  settings.rs  strategy.rs  strategy_preview.rs  toss.rs  toss_market.rs  trading.rs
src-tauri/src/config/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/market/: mod.rs
src-tauri/src/notifications/: discord.rs  mod.rs  types.rs
src-tauri/src/server/: market.rs  mod.rs  profiles.rs  records.rs  security.rs  toss.rs  trading.rs
src-tauri/src/storage/: balance_store.rs  database.rs  database_archive.rs  database_contract_tests.rs  database_io.rs  database_keychain.rs  database_projection.rs  database_schema.rs  database_types.rs  mod.rs  order_store.rs  pending_order_store.rs  risk_store.rs  stats_store.rs  stock_store.rs  strategy_store.rs  trade_store.rs
src-tauri/src/trading/: guard.rs  mod.rs  order.rs  position.rs  preflight.rs  risk.rs  simulation.rs  strategy.rs  views.rs
src-tauri/src/updater/: mod.rs
(+152 files in other folders)
