[package]
name = "kis-auto-trade"
version = "0.1.3"
description = "KISAutoTrade - Personal Stock Auto Trading System"
authors = []
license = "MIT"
repository = ""
default-run = "kis-auto-trade"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kis_auto_trade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kis-auto-trade"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[features]
# Production build 또는 dev server 미사용 시 필수 - 제거 금지
custom-protocol = ["tauri/custom-protocol"]
